<resources>
    <string name="app_name">myTourisma</string>
    <string name="facebook_app_id">1323622677719076</string>
    <string name="sign_up_cap">SIGN UP</string>
    <string name="sign_up_msg">Log in or sign up to get started.</string>
    <string name="login_cap">LOGIN</string>
    <string name="submit_cap">SUBMIT</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_using_mail_new">Sign up using email</string>
    <string name="login_using_mail_new">Login using email</string>
    <string name="forgot_msg_new">Enter your email address and we will send your password to it.</string>
    <string name="name_hint">Name</string>
    <string name="address_hint">Address</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="your_location">Your location</string>
    <string name="nearby">Nearby</string>
    <string name="landmark_more">Landmarks, Rivers, Places, more...</string>
    <string name="search_result">Search result</string>
    <string name="close">Close</string>
    <string name="similar_places">Similar Places</string>
    <string name="view_all">View All</string>
    <string name="description">Desciption</string>
    <string name="seemore">...see more</string>
    <string name="favorite_list">MY FAVOURITE</string>
    <string name="about_us">About Us</string>
    <string name="logout">Logout</string>
    <string name="share_friend">Share with your friends</string>
    <string name="facebook">Facebook</string>
    <string name="twitter">Twitter</string>
    <string name="google">Google</string>
    <string name="sms">SMS</string>


    <string name="font_normal_app">fonts/Dubai-Regular.otf</string>
    <!--<string name="font_normal_app">fonts/Ubuntu_R.ttf</string>-->
    <string name="font_bold_app">fonts/Dubai-Medium.otf</string>
    <string name="font_Muraid_Pro">fonts/myriadpro_regular.otf</string>


    <!--New String-->

    <string name="text_sign_up">Don\'t have an account? Sign up</string>
    <string name="choose_language_string_en">Please choose your language</string>
    <string name="choose_language_string_ar">الرجاء اختيار اللغة</string>
    <string name="choose_language_string_ru">Пожалуйста выберите язык</string>
    <string name="fees">FEES</string>
    <string name="ok">Ok</string>
    <string name="new_line">\n</string>

    <string name="network_error">No internet connection. Please, check your settings and try again.</string>

    <string name="privacy">This application related to tourist places in the UAE locations. App will use  your current locations and bluetooth for improving places details around you.
        We make you sure will not disclosed your any personal informations with anyone. The main part of the application is the location and
        Bluetooth low energy use then it will connect to nearest the Beacons and get the proper details of that particular place. </string>
    <string name="privacy_arabic">هذا التطبيق المتعلقة الأماكن السياحية في المواقع الإمارات العربية المتحدة. والتطبيق استخدام المواقع الحالية وبلوتوث لتحسين تفاصيل الأماكن حول يو. وي جعل أنت متأكد سوف يتم الكشف الخاص أي معلومات شخصية مع أحد. الجزء الرئيسي من التطبيق هو انخفاض استهلاك الطاقة الموقع وبلوتوث، فسيتم الاتصال إلى أقرب منارات والحصول على التفاصيل الصحيحة من هذا المكان بالذات.</string>
    <string name="privacy_russian">Это приложение, связанное с туристических мест в местах ОАЭ. App будет использовать ваши текущие местоположения и Bluetooth система для улучшения мест детали вокруг you.We, чтобы вы уверены, что не будут раскрыты ваши персональные информацию с кем-либо. Основная часть приложения является расположение и Bluetooth использование низкой энергии, то оно будет подключаться к ближайшему маяков и получить соответствующие детали этого конкретного места.</string>

    <string name="country_change">Currently myTourisma has places from UAE only. More countries to be added soon. Check for updates.</string>
    <string name="tutorial_notification_txt_russian">мы будем уведомлять Вас только о контенте, который является интересным и актуальным для Вас. Получите все выгоды от уведомлений.</string>
    <string name="tutorial_notification_txt_arabic">سوف يتم تنبيهك فقط عند العثور على ما هو يهمك ويثير اهتمامك، للإستمتاع بهذه المميزات الرجاء الضغط على”موافق”</string>
    <string name="tutorial_location_txt_russian">Мы будем использовать ваше местоположение только, чтобы показать вам самые близкие места на карте, для навигации и ближайших результатов поиска.</string>
    <string name="tutorial_location_txt_arabic">سوف يتم إستخدام موقعك للمساعدتة بإيجاد ما هو بالقرب منك والتمكن من الحصول على الطرق عند البحث</string>
    <string name="tutorial_bluetooth_txt_russian">Мы будем использовать ваш Bluetooth, чтобы найти ближайшие устройства вокруг вас. Как только вы войдёте в их диапазон, вы получите уведомления с интересными фактами и информацией об этом месте.</string>
    <string name="tutorial_bluetooth_txt_arabic">سيتم استخدام خاصية البلوتوث للعثور على المستقبلات الرقمية بالقرب منك، عند الدخول في مجال احدى المستقبلات سوف يتم تنبيهك بماهو مثير للاهتمام في المنطقة التي قمت بزيارتها</string>

    <string name="new_rate_dialog_title">Rate myTourisma!</string>
    <string name="rate_dialog_message">If you enjoy myTourisma app, would you mind taking a moment to rate it? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="new_rate_dialog_never">Never</string>
    <string name="new_rate_dialog_later">Later</string>
    <string name="new_rate_dialog_ok">Rate</string>

    <!-- review write text-->

    <string name="placedecription">A very good place to visit with faimly for one day,awesome days are at summer.there are lot of place to chill. I have been here arounds 4 times</string>


</resources>
